--- a/seazone-tech-front/package.json
+++ b/seazone-tech-front/package.json
@@ -18,6 +18,7 @@
     "docker:run:prod": "docker run -p 3000:3000 seazone-frontend:prod"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
