--- a/seazone-tech-front/package.json
+++ b/seazone-tech-front/package.json
@@ -18,11 +18,14 @@
     "docker:run:prod": "docker run -p 3000:3000 seazone-frontend:prod"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toggle": "^1.1.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "lucide-react": "^0.542.0",
     "next": "15.5.1",
     "react": "19.1.0",
